
config.xml:
----------------------
* Allow preconfiguration of <log ..> element and sub-elements. Patch by Jerome Lacoste.
* Allow preconfiguration of project and subelements (CC-352). Patch by Jerome Lacoste.

ConcurrentVersionsSystem.java:
----------------------
* Fixed bug when module attribute is set to a true CVS module, not just a directory. Patch by Brad Clarke.

CVS.java:
----------------------
* Deprecated CVS.java in favor of ConcurrentVersionsSystem.java to overcome issues with directory/filename conflicts, specifically with Eclipse IDE (CC-164). Note: CVS.java and other deprecated methods/classes are scheduled for deletion in the 3.0 release.

general:
----------------------
* Minor changes to make code jdk 1.3 compliant.
* Added fast-md5.jar to manifest for cruisecontrol.jar
* Deprecated the command-line argument named "port" in favor of "jmxport" to be more explicit.
* Javadoc, code, and test deprecation cleanup. Patch by Brad Clarke.
* New system property named "cruisecontrol.rmiport" set when -rmiport specified on the command line.
* Delete temp files created by tests (CC-344). Patch by Mark Doliner.
* Missing x10.jar origin in lib/readme.txt. Reported by Adrian Cho.
* Fixed project reloading so that changes to an existing project will be included when Cruise builds the next time. Paul Julius & Kent Spillner, pairing.
* When reparsing the config file, the new MD5 hash was not being updated, so once changed, the config file always looked new. Paul Julius & Kent Spillner, pairing.

JabberPublisher:
----------------------
* Support setting different "service". (CC-346) Patch by Ahti Kitsik.

JMX interface:
----------------------
* When setting the configuration contents via JMX, the contents are validated (CC-333). Patch by Allan Wick.

(Log)Manipulator:
----------------------