@@ -78,6 +78,7 @@ propertiesmapper=net.sourceforge.cruisecontrol.publishers.email.PropertiesMapper
 # listeners
 currentbuildstatuslistener=net.sourceforge.cruisecontrol.listeners.CurrentBuildStatusListener
 currentbuildstatusftplistener=net.sourceforge.cruisecontrol.listeners.CurrentBuildStatusFTPListener
+currentbuildstatuspagelistener=net.sourceforge.cruisecontrol.listeners.CurrentBuildStatusPageListener
 cmsynergysessionmonitor=net.sourceforge.cruisecontrol.listeners.CMSynergySessionMonitor
 
 # project structure
